force-app/main/default/objects/ProjectLine_Resource__c/ProjectLine_Resource__c.object-meta.xml
<CustomObject>
    <label>ProjectLine-Resource</label>
    <nameField>
        <displayFormat>PLR-{0000}</displayFormat>
        <label>ProjectLine-Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectLine-Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>