force-app/main/default/objects/ProjectLine_Resource__c/fields/Project_Product__c.field-meta.xml
<CustomField>
    <fullName>Project_Product__c</fullName>
    <label>Project Product</label>
    <referenceTo>ProjectLineItem__c</referenceTo>
    <relationshipLabel>ProjectLine-Resources</relationshipLabel>
    <relationshipName>ProjectLine_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>