force-app/main/default/objects/ProjectLine_Resource__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectLine_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>