force-app/main/default/objects/ProjectLine_Resource__c/fields/Squad_Leader__c.field-meta.xml
<CustomField>
    <fullName>Squad_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Squad Leader</label>
    <type>Checkbox</type>
</CustomField>