force-app/main/default/objects/ProjectLine_Resource__c/listViews/Squad_Lead.listView-meta.xml
<ListView>
    <fullName>Squad_Lead</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Squad Lead</label>
</ListView>